--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,8 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: npm i npm@latest -g
-      - run: npm audit
-      - run: npm install
+
+      - run: yarn install
 
       - save_cache:
           paths:
@@ -35,5 +34,5 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: npm ng build --prod
-      - run: npm ng test --single-run
+      - run: yarn ng build --prod
+      - run: yarn ng test --single-run
