--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - checkout
+      - setup_remote_docker
+
 
       # Download and cache dependencies
       - restore_cache:
@@ -36,3 +38,13 @@ jobs:
       # run tests!
       - run: yarn ng build --prod
       - run: yarn ng test --single-run
+
+      - run:
+          command: |
+            docker build -t testsami.azurecr.io/hello:1.0 .
+      - run:
+          command: |
+            docker login --username $DOCKER_USER --password $DOCKER_PASS testsami.azurecr.io
+      - run:
+          command: |
+            docker push testsami.azurecr.io/hello:1.0
