--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,9 @@ jobs:
       # run tests!
       - run: yarn ng build --prod
       - run: yarn ng test --single-run
-
+      -run:
+          command: |
+            sudo service nginx restart
       - run:
           command: |
             docker build -t testsami.azurecr.io/hello:1.0 .
